@@ -38,7 +38,7 @@ require_once 'includes/application_top.php';
       header('Content-Disposition: attachment; filename=l10n.php;');
 
       $map = zm_build_theme_l10n_map(DIR_FS_CATALOG.ZM_ROOT."themes/" . $_GET['theme'], $defaults, $merge);
-      echo "<?php\n\n    /*\n     * Language mapping generated by ZenMagick Admin v" . ZMSettings::get('ZenMagickVersion') . "\n     */\n";
+      echo "<?php\n\n    /*\n     * Language mapping generated by ZenMagick Admin v" . ZMSettings::get('zenmagick.version') . "\n     */\n";
       echo "\n";
       echo '    zm_l10n_add(array('."\n";
       $komma = false;
