@@ -109,7 +109,7 @@ class ZMToolboxForm extends ZMObject {
         }
 
         // add session token if configured
-        if ($hasId && 'post' == strtolower($attr['method']) && ZMLangUtils::inArray($attr['id'], ZMSettings::get('zenmagick.mvc.validation.tokenSecuredForms'))) {
+        if ($hasId && 'post' == strtolower($attr['method']) && ZMLangUtils::inArray($attr['id'], ZMSettings::get('zenmagick.mvc.html.tokenSecuredForms'))) {
             $hidden[ZMSession::TOKEN_NAME] = ZMRequest::instance()->getSession()->getToken();
         }
 
