@@ -81,7 +81,7 @@ class zm_openid extends Plugin {
         parent::init();
 
         // make openid_login use session token
-        ZMSettings::append('zenmagick.mvc.validation.tokenSecuredForms', 'openid_login', ',');
+        ZMSettings::append('zenmagick.mvc.html.tokenSecuredForms', 'openid_login', ',');
 
         // add success URL mapping if none exists
         ZMUrlMapper::instance()->setMappingInfo('openID', array('viewId' => 'success', 'view' => 'account', 'viewDefinition' => 'RedirectView'));
