@@ -1,0 +1,63 @@
+<?php
+/*
+ * ZenMagick - Extensions for zen-cart
+ * Copyright (C) 2006-2009 ZenMagick
+ *
+ * Portions Copyright (c) 2003 The zen-cart developers
+ * Portions Copyright (c) 2003 osCommerce
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or (at
+ * your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
+ */
+?>
+<?php
+
+
+/**
+ * Show settings controlller.
+ *
+ * @author DerManoMann
+ * @package org.zenmagick.plugins.zm_settings
+ * @version $Id$
+ */
+class ZMShowSettingsAdminController extends ZMPluginPageController {
+
+    /**
+     * Create new instance.
+     */
+    function __construct() {
+        parent::__construct('show_settings', zm_l10n_get('Display Settings'), 'zm_settings');
+    }
+
+    /**
+     * Destruct instance.
+     */
+    function __destruct() {
+        parent::__destruct();
+    }
+
+
+    /**
+     * {@inheritDoc}
+     */
+    public function processGet($request) {
+        $page = parent::processGet($request);
+        $context = array('settingDetails' => zm_get_settings_details());
+        $page->setContents($this->getPageContents($context));
+        return $page;
+    }
+
+}
+
+?>
