@@ -37,7 +37,7 @@
     <title><?php ZMMetaTags::instance()->getTitle() ?></title>
     <base href="<?php echo $request->getPageBase() ?>" />
     <meta http-equiv="content-type" content="text/html; charset=<?php echo zm_i18n('HTML_CHARSET') ?>" />
-    <meta name="generator" content="ZenMagick <?php echo ZMSettings::get('ZenMagickVersion') ?>" />
+    <meta name="generator" content="ZenMagick <?php echo ZMSettings::get('zenmagick.version') ?>" />
     <meta name="keywords" content="<?php ZMMetaTags::instance()->getKeywords()?>" />
     <meta name="description" content="<?php ZMMetaTags::instance()->getDescription()?>" />
     <link rel="stylesheet" type="text/css" media="screen,projection" href="<?php $zm_theme->themeURL("site.css") ?>" />
